--- a/mirrg.application.math.wulfenite/build.gradle
+++ b/mirrg.application.math.wulfenite/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 	//compile group: 'mirrg', name: 'mirrg.struct.hydrogen', version: '2.0.0'
 	//compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
 	//compile group: 'mirrg', name: 'mirrg.struct.hydrogen-1.0', version: '+'
+	compile group: 'mirrg', name: 'mirrg.helium.standard.hydrogen.struct', version: '+'
+	compile group: 'mirrg', name: 'mirrg.helium.standard.hydrogen.event', version: '+'
+	compile group: 'mirrg', name: 'mirrg.helium.standard.hydrogen.util', version: '+'
+	compile group: 'mirrg', name: 'mirrg.helium.swing.phosphorus.canvas', version: '+'
 
 }
 
@@ -32,22 +36,26 @@ def mavenRepositories = [
 
 	//'https://raw.githubusercontent.com/MirrgieRiana/mirrg.struct.hydrogen/master/maven',
 	//'http://hg.pf.osdn.jp/view/t/ta/tacticsrealize/mirrg.struct.hydrogen/raw-file/tip/maven',
+	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.standard/master/maven',
+	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.math/master/maven',
+	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.swing/master/maven',
+	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.compile/master/maven',
 
 ]
 
 // ★実行可能Jar
-def mainClass = null
+def mainClass = "mirrg.application.math.wulfenite.Main"
 
 def outputLocation =
 
 	// ★'../maven'にMavenプロジェクトとして出力する場合
-	'maven'
+	//'maven'
 
 	// ★'../repos'にJarを出力する場合
-	//'dir'
+	'dir'
 
 // ★まとまったJarとして出力する
-def allInOne = false
+def allInOne = true
 
 //////////////////////////////////////////////////////////////////////
 
