--- a/mirrg.application.math.wulfenite/build.gradle
+++ b/mirrg.application.math.wulfenite/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	compile group: 'mirrg', name: 'mirrg.helium.standard.hydrogen.struct', version: '+'
 	compile group: 'mirrg', name: 'mirrg.helium.standard.hydrogen.event', version: '+'
 	compile group: 'mirrg', name: 'mirrg.helium.standard.hydrogen.util', version: '+'
-	compile group: 'mirrg', name: 'mirrg.helium.swing.phosphorus.canvas', version: '0.1.2+'
+	compile group: 'mirrg', name: 'mirrg.helium.swing.phosphorus.canvas.game', version: '0.0.6+'
 	compile group: 'mirrg', name: 'mirrg.helium.swing.nitrogen.util', version: '+'
 	compile group: 'mirrg', name: 'mirrg.helium.math.hydrogen.complex', version: '+'
 	compile group: 'mirrg', name: 'mirrg.helium.compile.oxygen.editor', version: '1.0.5+'
@@ -43,6 +43,7 @@ def mavenRepositories = [
 	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.math/master/maven',
 	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.swing/master/maven',
 	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.compile/master/maven',
+	'https://raw.githubusercontent.com/MirrgieRiana/mirrg.helium.game/master/maven',
 
 ]
 
